--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.mvc.ignore-default-model-on-redirect=false
 
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.html
+
+spring.datasource.
