--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'mysql:mysql-connector-java'
-	implementation 'org.freemarker:freemarker'
+	//implementation 'org.freemarker:freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.21'
 	
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
