--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 server.port= 8080
-spring.datasource.url=jdbc:mysql://172.16.0.211:3306/ytw?serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+spring.datasource.druid.qq.url=jdbc:mysql://172.16.0.211:3306/ytw?serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+spring.datasource.druid.qq.username=root
+spring.datasource.druid.qq.password=mysql
+
+#spring.datasource.druid.normal.url=jdbc:mysql://172.16.0.212:3306/ytw?serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+#spring.datasource.druid.normal.username=root
+#spring.datasource.druid.normal.password=mysql
+
+spring.datasource.url=jdbc:mysql://172.16.0.212:3306/ytw?serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=mysql
 
