--- a/src/main/resources/application-common.properties
+++ b/src/main/resources/application-common.properties
@@ -2,3 +2,5 @@ spring.mvc.ignore-default-model-on-redirect=false
 
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.html
+
+server.port= 8080
