--- a/src/main/resources/application-common.properties
+++ b/src/main/resources/application-common.properties
@@ -1,6 +1,6 @@
 spring.mvc.ignore-default-model-on-redirect=false
 
 spring.freemarker.template-loader-path=classpath:/templates
-spring.freemarker.suffix=.html
+spring.freemarker.suffix=.ftl
 
 server.port= 8080
