--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #common config
 #spring.profiles.include=common,freemarker,freemarkerstatic
-spring.profiles.include=common
+spring.profiles.include=common,freemarker,freemarkershareds
 #profile(default:dev)
 spring.profiles.active=@profileActive@,dev
