--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
 	
 	implementation 'mysql:mysql-connector-java'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.21'
 	compile group: 'org.apache.poi', name: 'poi', version: '4.0.1'
 	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.1'
+	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
