--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://172.16.0.212:3306/ytw?serverTimezone=GMT%2B8&
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.a=saisihei
+
+file.tmp=/usr/local/app/tmp
+file.path=/usr/local/app/ok
