--- a/src/main/resources/application-freemarkershareds.properties
+++ b/src/main/resources/application-freemarkershareds.properties
@@ -1,7 +1,7 @@
 #static class name as : G_xxxx
 #----------------------------------------#
-frm.static.attr.bean.G_Constant=com.wish.utils.Constant
-frm.static.attr.bean.G_Tool=com.wish.utils.Tool
+frm.static.attr.bean.Constant=com.utils.Constant
+frm.static.attr.bean.G_Tool=com.utils.Tool
 
 #jquery-core
 frm.static.attr.str.js_jquery=js/jquery-1.12.0.js
