--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 spring.profiles.include=common,freemarker,freemarkershareds
 #profile(default:dev)
 spring.profiles.active=@profileActive@,dev
+
+spring.servlet.multipart.max-file-size=-1
