--- a/src/main/resources/application-common.properties
+++ b/src/main/resources/application-common.properties
@@ -4,4 +4,11 @@ spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftl
 
 server.port= 8080
+server.tomcat.uri-encoding=UTF-8
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.servlet.multipart.max-request-size=-1
+spring.servlet.multipart.max-file-size=-1
 
