--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 #spring.profiles.include=common,freemarker,freemarkerstatic
 spring.profiles.include=common,freemarker,freemarkershareds
 #profile(default:dev)
-spring.profiles.active=@profileActive@,dev
+spring.profiles.active=dev,prod
