--- a/src/main/resources/config/application-prod.properties
+++ b/src/main/resources/config/application-prod.properties
@@ -1,10 +1,11 @@
-spring.datasource.druid.qq.url=jdbc:mysql://cdb-i1mqznj6.bj.tencentcdb.com:10012/flytree?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf8
+spring.datasource.druid.qq.url=jdbc:mysql://cdb-i1mqznj6.bj.tencentcdb.com:10012/flytree?serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.druid.qq.username=root
 spring.datasource.druid.qq.password=maml%897
 
 spring.datasource.url=jdbc:mysql://172.16.0.212:3306/ytw?serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=mysql
+
 spring.a=saisihei
 
 file.tmp=/usr/local/app/tmp
